--- a/indext.html
+++ b/indext.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <title>메인은 그대로 진행</title>
+    <title>메인은 브랜치와 상관없이 그대로 진행</title>
     <h1>add test</h1>
     <h1>test other</h1>
     
