충돌 발생을 위한 커밋

--- a/indext.html
+++ b/indext.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <title>메인은 그대로 진행</title>
+    <title>충돌을 발생시킬게요</title>
     <h1>add test</h1>
     <h1>test other</h1>
 
